Tech Debt, JS -> TS Fully + Remove Vulnerabilities

--- a/views/pages/canon.ejs
+++ b/views/pages/canon.ejs
@@ -14,8 +14,8 @@
         let loggedIn = <%= auth.loggedIn %>
     </script>
     <script src='./main.js' type="module"></script>
-    <script src='./compiledTS/character.js' type="module"></script>
-    <script src='./compiledTS/rankings.js' type="module"></script>
+    <script src='./character.js' type="module"></script>
+    <script src='./rankings.js' type="module"></script>
 </head>
 
 <body>
