--- a/views/pages/character.ejs
+++ b/views/pages/character.ejs
@@ -14,8 +14,8 @@
         let loggedIn = <%= auth.loggedIn %>
     </script>
     <script src='./main.js' type="module"></script>
-    <script src='./compiledTS/character.js' type="module"></script>
-    <script src='./compiledTS/rankings.js' type="module"></script>
+    <script src='./character.js' type="module"></script>
+    <script src='./rankings.js' type="module"></script>
 </head>
 
 <body>
@@ -121,7 +121,7 @@
     <%- include("../partials/footer") %>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./compiledTS/characterLogic.js" type="module"></script>
+    <script src="./characterLogic.js" type="module"></script>
 </body>
 
 </html>
